--- a/LakesMicromaps.Rmd
+++ b/LakesMicromaps.Rmd
@@ -16,7 +16,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Workaround step to associate lakes with aggregated ecoregions
 ```{r, eval=FALSE}
 library(rgdal); library(rgeos);library(GISTools)
-lakes = readOGR('L:/Priv/CORFiles/Geospatial_Library/Data/Project/LakeCat','NHDPlusV21_Lakes')
+lakes = readOGR('H:/NHDPlusV21/NHDPlusNationalData/NHDPlusV21_National_Seamless.gdb','NHDWaterbody')
+levels(lakes$FTYPE)
+lakes = lakes[lakes$FTYPE %in% c('LakePond','Reservoir'),]
 lake_cents = coordinates(lakes)
 lakes = SpatialPointsDataFrame(coords = lake_cents, data = lakes@data, proj4string = CRS(proj4string(lakes)))
 
@@ -46,13 +48,13 @@ if (any(is.na(lakes$WSA9))){
   lakes$WSA9_NAME[is.na(lakes$WSA9_NAME)] = ageco$WSA9_NAME[match(lakes$WSA9[is.na(lakes$WSA9_NAME)],ageco$WSA9)]
   any(is.na(lakes$WSA9_NAME))
 }
-save.image("C:/Users/mweber/Temp/lakes.RData")
+save.image("H:/WorkingData/lakes.RData")
 ```
 
 ## Link with some LakeCat data and make example micromap
 ### Watershed Area
 ```{r, message=FALSE, error=FALSE}
-load("C:/Users/mweber/Temp/lakes.RData")
+load("H:/WorkingData/lakes.RData")
 #load("//aa.ad.epa.gov/ord/COR/Users/M-Z/mweber/Net MyDocuments/Publications/Wiley StatRef Article/MicromapExample_wsa.RData")
 kffact = read.csv('L:/Priv/CORFiles/Geospatial_Library/Data/Project/LakeCat/FinalTables/Kffact_Final.csv')
 head(kffact)
@@ -84,9 +86,12 @@ levels(lakedata$WSA_NAME) <- c("Coastal Plains","N. Appalachians","N. Plains","S
 # define and name the statistics of interest  
 stats <- function(x)(c(N = length(x), Mean = mean(x)))  
 
-statsq <-function(x)(c(N = length(x), Min = min(x), Q1 = quantile(x,c(.25)),
+# statsq <-function(x)(c(N = length(x), Min = min(x), Q1 = quantile(x,c(.25)),
+#                        Median = quantile(x,c(.5)), Q3 = quantile(x,c(.75)),
+#                        Max = max(x)))
+statsq <-function(x)(c(N = length(x), Min = quantile(x,c(.05)), Q1 = quantile(x,c(.25)),
                        Median = quantile(x,c(.5)), Q3 = quantile(x,c(.75)),
-                       Max = max(x)))
+                       Max = quantile(x,c(.95))))
 
 library(reshape)
 lakes.dfm   <- melt(lakedata,  
@@ -129,7 +134,7 @@ print(Wshd_size, name='Wshd_size.png',res=1200)
 
 ### Soil Erodibility, Impervious Surfaces, and Road Density for all lakes
 ```{r, message=FALSE, error=FALSE}
-load("C:/Users/mweber/Temp/lakes.RData")
+load("H:/WorkingData/lakes.RData")
 #load("//aa.ad.epa.gov/ord/COR/Users/M-Z/mweber/Net MyDocuments/Publications/Wiley StatRef Article/MicromapExample_wsa.RData")
 kffact = read.csv('L:/Priv/CORFiles/Geospatial_Library/Data/Project/LakeCat/FinalTables/Kffact_Final.csv')
 head(kffact)
@@ -224,7 +229,7 @@ print(Kffact_Rd_Imp, name='Kffact_Rd_Imp.png',res=1200)
 
 ### Percent Urban, Percent Ag, and Percent Forested for all lakes
 ```{r, message=FALSE, error=FALSE}
-load("C:/Users/mweber/Temp/lakes.RData")
+load("H:/WorkingData/lakes.RData")
 #load("//aa.ad.epa.gov/ord/COR/Users/M-Z/mweber/Net MyDocuments/Publications/Wiley StatRef Article/MicromapExample_wsa.RData")
 nlcd = read.csv('L:/Priv/CORFiles/Geospatial_Library/Data/Project/LakeCat/FinalTables/NLCD2006_Final.csv')
 head(nlcd)
@@ -232,7 +237,7 @@ nlcd$PctUrb = nlcd$PctUrbLo2006Ws + nlcd$PctUrbMd2006Ws + nlcd$PctUrbHi2006Ws
 nlcd$PctAg = nlcd$PctCrop2006Ws
 nlcd$PctFor = nlcd$PctDecid2006Ws + nlcd$PctConif2006Ws + nlcd$PctMxFst2006Ws
 nlcd = nlcd[nlcd$inStreamCat==0,]
-lakedata = nlcd[c(1,39:41)]
+lakedata = nlcd[c(1,3,39:41)]
 
 
 lakedata$PctUrb[is.na(lakedata$PctUrb)] = 0
@@ -319,4 +324,30 @@ NLCD_mmap <- mmgroupedplot(stat.data=landcov,
               list(4, header="Ag", header.size=1,
               xaxis.title="percent")))
 print(NLCD_mmap, name='NLCD_mmap.png',res=1200)
+```
+
+
+### Try out some other ideas
+```{r, message=FALSE, error=FALSE}
+library(ggplot2)
+nlcd = read.csv('L:/Priv/CORFiles/Geospatial_Library/Data/Project/LakeCat/FinalTables/NLCD2006_Final.csv')
+head(nlcd)
+nlcd$PctUrb = nlcd$PctUrbLo2006Ws + nlcd$PctUrbMd2006Ws + nlcd$PctUrbHi2006Ws
+nlcd$PctAg = nlcd$PctCrop2006Ws
+nlcd$PctFor = nlcd$PctDecid2006Ws + nlcd$PctConif2006Ws + nlcd$PctMxFst2006Ws
+nlcd = nlcd[nlcd$inStreamCat==0,]
+lakedata = nlcd[c(1,39:41)]
+lakedata$WsAreaBin <- cut(lakedata$WsAreaSqKm, quantile(lakedata$WsAreaSqKm), include.lowest=TRUE)
+levels(lakedata$WsAreaBin) <- list('<25th'=c("[0.0036,0.968]"), '50-75th'=c("(0.968,3.31]", "(3.31,13.8]"), '>75th' = c("(13.8,3.13e+06]"))
+lakedata$WSA_NAME = lakes@data$WSA9_NAME[match(lakedata$COMID, lakes@data$COMID)]
+f <- function(x) {
+  r <- quantile(x, probs = c(0.10, 0.25, 0.5, 0.75, 0.90))
+  names(r) <- c("ymin", "lower", "middle", "upper", "ymax")
+  r
+}
+
+p <- ggplot(lakedata, aes(WsAreaBin,PctAg))
+p + stat_summary(fun.data = f, geom="boxplot") + facet_wrap(~ WSA_NAME, ncol=2)
+# p + geom_boxplot() + facet_wrap(~ WSA_NAME, ncol=2)
+
 ```
